- Numbered setup for delay and fadetimes

2015-04-19:

- Increased size of channellogos for timers in mainmenu (provided by utiltiy@vdrportal.de)

2015-04-20:

- Optimized position of timerstoptime in displaymenutimers (provided by utiltiy@vdrportal.de)
- Added section for neutrinoepg-plugin in displaymenudefault
- Added graphical progressbars for systeminfo-plugin
- Added symbol for remotetimers in mainmenutimers

2015-04-21:

- Updated HISTORY, increased luminescence of remoteTimers.png

2015-04-22:

- Added percentseen in displaymenurecordings
- Reworked displayreplay, added recend
- Added setup for colored/gray elapsed-bars
- Fixed rectitle

2015-04-24:

- Optimized bar and position of percentseen

2015-04-26:

- Added skinsetup for recordingsmenu
- Fixed translation in setup.xml

2015-04-27:

- Added special treatment for fritzbox "Call details" and plex-setup "UUID" in displaymenudefault

2015-04-28:

- Some small fixes
- Updated HISTORY
- Fixed tokens title/eventtitle in displaymenutimers
- Fixed areascroll in displaymenuschedules
- Fixed nonsense in display replay (datetime)
- Removed {recdate} in  displayreplay
- Some small fixes

2015-04-30:

- Added setup for single- or two-line display of titel/subtitle in replay and channelinfo
- Adapted defaultmenu.xml to menucategory setup

2015-05-05:

- Added ecmtime to channelinfo
- Adapted width of remotetimerssymbol in mainmenutimers

2015-05-06:

- Added alternate, extended ecminfo
- Added separate twoline-settings for channelinfo and replay

2015-05-07:

- Fixed ECM

2015-05-10:

- Optimized ECM-infos (provided by utiltiy@vdrportal.de)
- Changed display of resolution in channelinfo
- Fixed scrollbar in displaymenusetup
- Added markers for recordings seen less or more 85%

2015-05-10:

- Changed timers- and lastrecordings-handling in mainmenu
- Added shadowsRecordingsMain1.png

2015-05-10:

- Fixed menuFadetime-parameter, added shifting for displaychannel (both provided by MegaX@vdrportal)